accept changes on procfile

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'https://boiling-peak-24210.herokuapp.com/'
+app.baseURL = 'http://localhost/pos/public'
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
