--- a/.env
+++ b/.env
@@ -20,7 +20,8 @@ CI_ENVIRONMENT = development
 # APP
 #--------------------------------------------------------------------
 
-app.baseURL = 'http://localhost/pos/public'
+app.baseURL = 'http://localhost/pos'
+NIXPACKS_BUILD_CMD=composer install && php artisan optimize && php artisan config:cache
 # app.forceGlobalSecureRequests = false
 
 # app.sessionDriver = 'CodeIgniter\Session\Handlers\FileHandler'
